# concordium-esealing

./: .gitignore  README.md  readme.md
central-signing-service-v1/: .env.development  .gitignore  Dockerfile  README.md  index.ts  package.json  smart-contract-utils.ts
central-signing-service-v1/scripts/: dist.sh
deploy/: .env  README.md  docker-compose.yml  nginx.conf  registry.json
deploy/local/: docker-compose.yml
notary-smart-contract-v0/: .gitignore  Cargo.toml
notary-smart-contract-v0/.cargo/: config.toml
notary-smart-contract-v0/src/: lib.rs
notary-smart-contract-v1/: Cargo.toml
notary-smart-contract-v1/src/: lib.rs
web/: .env  .gitignore  Dockerfile  README.md  config-overrides.js  package-lock.json  package.json
web/config/: webpack.config.js
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx  FAQ.tsx  FileUploadPage.tsx  Logo.tsx  index.css  index.tsx  react-app-env.d.ts  theme.ts
web/src/client/: client.ts  const.ts  crypto-wallet-client.ts  shared-client-server-types.ts  wallet-client-utils.ts
web/src/components/: FileDisplay.css  FileDisplay.tsx  FileUploadZone.css  FileUploadZone.tsx  TransactionHashDisplay.tsx  UserWalletSigning.tsx
