[package]
name = "notary-smart-contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58check= "*"
concordium-std="2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
# Don't unwind on panics, just trap.
# panic = "abort"